Make ajax calls in UserQuotes page

--- a/Web/Bookworm.Web/Views/Quote/Edit.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Edit.cshtml
@@ -1,29 +1,43 @@
 ﻿@model QuoteViewModel
 
+@{
+    ViewData["Title"] = "Edit Quote";
+}
+
+@*<h2 class="text-center mt-4">Edit Quote</h2>*@
+
+<div class="d-flex justify-content-center mt-4">
+    <div class="card text-center title-card animate__animated animate__jackInTheBox">
+        <div class="card-body">
+            <h3>@this.ViewData["Title"]<i class="fas fa-pen icon ms-3"></i></h3>
+        </div>
+    </div>
+</div>
+
 <form method="post" class="col-lg-8 offset-lg-2">
     <div asp-validation-summary="All" class="text-danger"></div>
     <input type="hidden" asp-for="Id">
     <div class="form-group justify-content-center">
         <label asp-for="Content"><strong>Content*</strong></label>
-        <textarea asp-for="Content" class="form-control" rows="12"></textarea>
+        <textarea asp-for="Content" class="form-control border border-2" rows="6"></textarea>
         <span asp-validation-for="Content" class="small text-danger"></span>
     </div>
-    <div class="form-group">
+    <div class="form-group my-3">
         <label asp-for="AuthorName"><strong>Author's Name</strong></label>
-        <input value=@(Model.AuthorName != null ? Model.AuthorName : "") asp-for="AuthorName" type="text" class="form-control">
+        <input value=@(Model.AuthorName != null ? Model.AuthorName : "") asp-for="AuthorName" type="text" class="form-control border border-2">
         <span asp-validation-for="AuthorName" class="small text-danger"></span>
     </div>
-    <div class="form-group">
+    <div class="form-group my-3">
         <label asp-for="BookTitle"><strong>Book Title</strong></label>
-        <input asp-for="BookTitle" value="@(Model.BookTitle != null ? Model.BookTitle : "")" type="text" class="form-control">
+        <input asp-for="BookTitle" value="@(Model.BookTitle != null ? Model.BookTitle : "")" type="text" class="form-control border border-2">
         <span asp-validation-for="BookTitle" class="small text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="MovieTitle"><strong>Movie Title</strong></label>
-        <input asp-for="MovieTitle" value=@(Model.MovieTitle != null ? Model.MovieTitle : "") type="text" class="form-control">
+        <input asp-for="MovieTitle" value=@(Model.MovieTitle != null ? Model.MovieTitle : "") type="text" class="form-control border border-2">
         <span asp-validation-for="MovieTitle" class="small text-danger"></span>
     </div>
-    <div class="text-center">
-        <button type="submit" class="btn button text-center form-button"><strong>Edit Quote</strong></button>
+    <div class="text-center my-3">
+        <button type="submit" class="btn button text-center form-button fs-5"><strong>Edit Quote</strong></button>
     </div>
 </form>
