--- a/Web/Bookworm.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -5,39 +5,33 @@
 
 <h1 class="text-center mt-5">Welcome to Admin Area!</h1>
 
-
-<div class="row">
-    <div class="col-xl-3 col-md-6 mb-4" style="margin-top:3rem">
-        <div class="card border-left-warning shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                            Pending Book Requests
-                        </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">@unapprovedBooksCount</div>
+<div class="row mt-5">
+    <div class="card border-left-primary shadow h-100 py-2">
+        <div class="card-body">
+            <div class="row no-gutters align-items-center">
+                <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                        Pending Book Requests
                     </div>
-                    <div class="col-auto">
-                        <i class="fas fa-book fa-2x"></i>
-                    </div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800">@unapprovedBooksCount</div>
+                </div>
+                <div>
+                    <i class="fas fa-book fa-2x ms-5"></i>
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="col-xl-3 col-md-6 mb-4" style="margin-top:3rem">
-        <div class="card border-left-warning shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                            Pending Quotes Requests
-                        </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">@unapprovedQuotesCount</div>
+    <div class="card border-left-primary shadow h-100 py-2">
+        <div class="card-body">
+            <div class="row no-gutters align-items-center">
+                <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                        Pending Quotes Requests
                     </div>
-                    <div class="col-auto">
-                        <i class="fas fa-pen fa-2x"></i>
-                    </div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800">@unapprovedQuotesCount</div>
+                </div>
+                <div class="col-auto">
+                    <i class="fas fa-pen fa-2x"></i>
                 </div>
             </div>
         </div>
