--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -38,18 +38,16 @@
 
 @if (this.User.Identity.IsAuthenticated)
 {
-    <section>
-        <div class="d-flex justify-content-evenly ">
-            <div>
-                <a asp-controller="Book" asp-action="Upload" class="btn button btn-lg animate__animated animate__heartBeat">
-                    Upload Book
-                </a>
-            </div>
-            <div>
-                <a asp-controller="Quote" asp-action="Add" class="btn button btn-lg animate__animated animate__heartBeat">
-                    Upload Quote
-                </a>
-            </div>
+    <section class="d-flex justify-content-evenly homeBtnsSection my-5">
+        <div>
+            <a asp-controller="Book" asp-action="Upload" class="btn button btn-lg animate__animated animate__heartBeat">
+                Upload Book
+            </a>
+        </div>
+        <div>
+            <a asp-controller="Quote" asp-action="Add" class="btn button btn-lg animate__animated animate__heartBeat">
+                Upload Quote
+            </a>
         </div>
     </section>
 }
