--- a/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,9 @@
                 <div class="collapse navbar-collapse" id="navbarToggler">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item mx-2">
-                            <a class="nav-link" aria-current="page" asp-area="" asp-controller="Home" asp-action="Index"><i class="me-2 fas fa-book"></i>@GlobalConstants.SystemName</a>
+                            <a class="nav-link" aria-current="page" asp-area="" asp-controller="Home" asp-action="Index">
+                                <i class="me-2 fas fa-book"></i>@GlobalConstants.SystemName
+                            </a>
                         </li>
                         <li class="nav-item mx-2">
                             <a class="nav-link" aria-current="page" asp-area="" asp-controller="Category" asp-action="All">Categories</a>
@@ -50,9 +52,9 @@
 
 
     <footer class="bookworm-footer py-4 text-center text-white d-flex align-items-center justify-content-center fs-5">
-            <span>
-                &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a class="privacy-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            </span>
+        <span>
+            &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a class="privacy-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </span>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
