--- a/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>@this.ViewData["Title"] - @GlobalConstants.SystemName</title>
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" asp-append-version="true" />
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
-    <link href="~/lib/toastr/toastr.min.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/lib/toastr.js/toastr.css" rel="stylesheet" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/animate.css/animate.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
@@ -62,7 +62,7 @@
     <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js" asp-append-version="true"></script>
 
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
-    <script src="~/lib/toastr/toastr.min.js"></script>
+    <script src="~/lib/toastr.js/toastr.min.js"></script>
     <script src="~/js/site.min.js" asp-append-version="true"></script>
     <partial name="_UserMessages" />
     @await this.RenderSectionAsync("Scripts", required: false)
