--- a/Web/Bookworm.Web/wwwroot/lib/toastr.js/toastr.css
+++ b/Web/Bookworm.Web/wwwroot/lib/toastr.js/toastr.css
@@ -77,8 +77,8 @@ button.toast-close-button {
   left: 12px;
 }
 .toast-top-right {
-  top: 12px;
-  right: 12px;
+  top: 5rem;
+  right: 2rem;
 }
 .toast-bottom-right {
   right: 12px;
