--- a/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
@@ -23,14 +23,14 @@
 }
 else
 {
-    <div class="my-3">
+    <div class="my-3 d-flex align-items-center">
         <div class="d-flex align-items-center mb-2">
             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" onclick="approvedQuotes()">
             <label class="form-check-label fs-5 ms-2" for="flexRadioDefault1">
                 Show Approved Quotes
             </label>
         </div>
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center ms-5">
             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" onclick="unapprovedQuotes()">
             <label class="form-check-label fs-5 ms-2" for="flexRadioDefault2">
                 Show Unapproved Quotes
@@ -65,7 +65,7 @@ else
                         }
                         else
                         {
-                            <td class="text-center align-middle">—</td>
+                            <td class="text-center align-middle"><i class="fa-regular fa-circle-xmark fa-xl x-icon"></i></td>
                         }
                         @if (@Model.Quotes[i].MovieTitle != null)
                         {
@@ -73,7 +73,7 @@ else
                         }
                         else
                         {
-                            <td class="text-center align-middle">—</td>
+                            <td class="text-center align-middle"><i class="fa-regular fa-circle-xmark fa-xl x-icon"></i></td>
                         }
                         @if (@Model.Quotes[i].BookTitle != null)
                         {
@@ -81,9 +81,18 @@ else
                         }
                         else
                         {
-                            <td class="text-center align-middle">—</td>
+                            <td class="text-center align-middle"><i class="fa-regular fa-circle-xmark fa-xl x-icon"></i></td>
                         }
-                        <td class="text-center align-middle">@(Model.Quotes[i].IsApproved ? "Yes" : "No")</td>
+                        <td class="text-center align-middle">
+                            @if (Model.Quotes[i].IsApproved)
+                            {
+                                <i class="fa-solid fa-thumbs-up fa-xl"></i>
+                            }
+                            else
+                            {
+                                <i class="fa-solid fa-thumbs-down fa-xl"></i>
+                            }
+                        </td>
                         <td class="text-center align-middle">
                             <a asp-area="" asp-action="Edit" asp-controller="Quote" asp-route-id="@Model.Quotes[i].Id" class="btn btn-warning">Edit</a>
                         </td>
@@ -96,5 +105,5 @@ else
 
 
 @section Scripts{
-    <script src="~/js/updateQuotesTable.js"></script>
+    <script src="~/js/updateQuotesTable.js" charset="UTF-8"></script>
 }
