--- a/Web/Bookworm.Web/Views/Category/All.cshtml
+++ b/Web/Bookworm.Web/Views/Category/All.cshtml
@@ -19,6 +19,24 @@
 <div class="container mb-5">
     @for (int i = 0; i <= Model.Count - 1; i += 3)
     {
+       @* <div class="col-md-6 col-lg-4 mb-5">
+            <div class="portfolio-item mx-auto"
+                 data-bs-toggle="modal"
+                 data-bs-target="#portfolioModal1">
+                <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                    <div class="portfolio-item-caption-content text-center text-white">
+                        <i class="fas fa-plus fa-3x"></i>
+                    </div>
+                </div>
+                <img class="img-fluid"
+                     src="@Model[i].ImageUrl"
+                     alt="..." />
+            </div>
+        </div>
+*@
+      
+
+
         <div class="row">
             <div class="col-md-4 my-3">
                 <a class="category-link" asp-controller="Book" asp-action="All" asp-route-categoryName="@Model[i].Name">
